Add container deploy setup for Render + externalize secrets/CORS
Prepares the backend for a real deployment (Render web service on
Docker, MongoDB Atlas, Neo4j Aura, Upstash Redis, all free tier):

- Dockerfile (multi-stage, non-root runtime user) + .dockerignore.
- render.yaml blueprint wiring the Docker build and required env vars
  (all secrets marked sync: false, filled manually in the Render
  dashboard, never committed).
- docker-compose.yml: optional local convenience stack
  (mongo_local/neo4j_local/redis_local), replaces the manual
  `docker start` flow from CLAUDE.md.
- .env.example documents every required variable with placeholder
  values only - no real credentials.
- .gitignore now excludes .env/.env.* (except .env.example) so a real
  local .env can never be committed by accident.

application.properties: every connection setting (Mongo URI, Neo4j
URI/user/password, Redis host/port/password/ssl/db, server port) is
now sourced from an env var with the existing local-dev value kept as
default, so nothing breaks for local `./mvnw spring-boot:run`. Added
spring-boot-starter-actuator exposing only /actuator/health (used as
Render's health check) and made CORS allowed origins configurable via
GAMEHUB_CORS_ORIGINS instead of being hardcoded to localhost:4200, so
the deployed Vercel frontend domain can be whitelisted without a code
change.