@@ -3,7 +3,9 @@ package it.unipi.lsmsd.gamehub.security;
 import static org.springframework.http.HttpStatus.UNAUTHORIZED;
 
 import jakarta.servlet.DispatcherType;
+import java.util.Arrays;
 import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -24,6 +26,9 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${gamehub.cors.allowed-origins}")
+    private String allowedOrigins;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
@@ -57,6 +62,8 @@ public class SecurityConfig {
                                         .permitAll()
                                         .requestMatchers("/login", "/signup")
                                         .permitAll()
+                                        .requestMatchers("/actuator/health")
+                                        .permitAll()
                                         .requestMatchers("/user/loadgames")
                                         .hasRole("ADMIN")
                                         .anyRequest()
@@ -70,7 +77,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
         configuration.setAllowedMethods(
                 List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
